--- a/src/app/operation/sell-card/sell-card.component.css
+++ b/src/app/operation/sell-card/sell-card.component.css
@@ -2,5 +2,13 @@
   border-style: solid;
   border-width: 5px;
   border-color: #47A8FF;
+
+}
+.star {
+  font-size: 1.5rem;
+  color: #EAEDEF;
 }
 
+.filled {
+  color: #007BFF;
+}
