--- a/src/app/operation/sell-card/sell-card.component.html
+++ b/src/app/operation/sell-card/sell-card.component.html
@@ -5,8 +5,16 @@
         <a href="http://www.fundamentus.com.br/detalhes.php?papel={{ sell.stock_data.code }}" target="_blank">{{ sell.stock_data.code }}</a>-{{ sell.stock_data.name }} ({{ sell.stock_data.owned }}) - {{
         sell.nickname }} <span title="{{ getDateLapse(sell.creation_date) }}">({{ sell.creation_date | date: "dd.MM.y" }})</span>
       </div>
-      <div class="col-2">
+      <div class="col-1">
         <zen-note-modal [operation_pk]="sell.pk"></zen-note-modal>
+      </div>
+      <div class="col-1">
+        <ngb-rating [max]="1" [resettable]="true" [(rate)]="sell.favorite"
+          (rateChange)="updateFavorite()">
+          <ng-template let-fill="fill">
+            <span class="star" [class.filled]="fill === 100">&#9733;</span>
+          </ng-template>
+        </ngb-rating>
       </div>
     </div>
     <div class="card-text">
