Learning screen created

--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -2,11 +2,18 @@
   <h5 class="my-0 mr-md-auto font-weight-normal"><a class="p-2 text-dark zen_menu retroshadow" href="/zenindex">ZT</a></h5>
 
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" href="/stock">Stock</a> |
-    <a class="p-2 text-dark" href="/experience">Focus on Experiences</a> |
-    <a class="p-2 text-dark" href="/buy-focus">Focus on Purchases</a> |
-    <a class="p-2 text-dark" href="/sell-focus">Focus on Sales</a> |
-    <a class="p-2 text-dark" href="/operations-center">Operations Center</a>
+    <div class="row">
+      <div class="col-12 text-center">
+        <a class="p-2 text-dark" href="/stock">Stock</a> |
+        <a class="p-2 text-dark" href="/experience">Focus on Experiences</a> |
+        <a class="p-2 text-dark" href="/buy-focus">Focus on Purchases</a> |
+        <a class="p-2 text-dark" href="/sell-focus">Focus on Sales</a> |
+        <a class="p-2 text-dark" href="/operations-center">Operations Center</a>
+      </div>
+        <div class="col-12 text-center">
+        <a class="p-2 text-dark" href="/learning">Learning</a>
+      </div>
+    </div>
   </nav>
   <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
 </div>
