--- a/src/app/learning/paper-buy-card/paper-buy-card.component.html
+++ b/src/app/learning/paper-buy-card/paper-buy-card.component.html
@@ -1,3 +1,31 @@
-<p>
-  paper-buy-card works!
-</p>
+<div class="card zen-card-class" [ngStyle]="{'background': getBackgroundColor(buy)}">
+  <div class="card-body">
+    <div class="row card-title">
+      <div class="col-11">
+        <a href="http://www.fundamentus.com.br/detalhes.php?papel={{ buy.stock_data.code }}"
+          target="_blank">{{ buy.stock_data.code }}</a>-{{ buy.stock_data.name }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} 
+        <span title="{{ getDateLapse(buy.creation_date) }}">({{ buy.creation_date | date: "dd.MM.y" }})</span>
+      </div>
+    </div>
+
+    <div class="card-text">
+      <div class="row">
+        <div class="col-6">
+          <ul>
+            <li>Amount: {{ buy.amount }}</li>
+            <li>Price(Of buy): R$ {{ buy.price | number: '1.2-2' }}</li>
+            <!-- <li>Cost: R$ {{ buy.cost | number: '1.2-2' }}/R$ {{ buy.average_cost | number: '1.2-2' }}</li> -->
+          </ul>
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Stock value: {{ buy.stock_data.price }}
+              <zen-edit-stock [stockInput]="buy.stock_data" (onStockUpdated)="notifyChanges()"></zen-edit-stock> 
+              <li><hr/></li>
+              <!-- <li>Gain: <span [outerHTML]="buy.operation_gain | number: '1.2-2' | numberColor "></span>/ <span [outerHTML]="buy.operation_gain_percent | number: '1.2-2' | numberColor "></span>%</li> -->
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
