--- a/src/app/learning/paper-buy-edit/paper-buy-edit.component.html
+++ b/src/app/learning/paper-buy-edit/paper-buy-edit.component.html
@@ -15,7 +15,7 @@
         <button type="button" class="btn btn-primary mr-1" (click)="save(paperBuy);" [disabled]="!paperBuyEditForm.form.valid">Edit
         </button>
 
-        <zen-paper-quick-sell class="mr-1" [paperBuy]="paperBuy" (onOperationSold)="updateBuy()"></zen-paper-quick-sell>
+        <zen-paper-quick-sell class="mr-1" [paperBuy]="paperBuy" (onPaperSellCreated)="notifySellCreated($event)"></zen-paper-quick-sell>
         <!-- <zen-note-modal [operation_pk]="paperBuy.pk"></zen-note-modal> -->
       </div>  
     </div>
