--- a/src/app/learning/paper-quick-sell/paper-quick-sell.component.html
+++ b/src/app/learning/paper-quick-sell/paper-quick-sell.component.html
@@ -1,4 +1,4 @@
 <button title="Make a paper sell (A fake sell just for learning purposes)" type="button" class="btn btn-primary"
   (click)="quickPaperSell();">
-  Paper Sell
+  Paper Sale
 </button>
