--- a/src/app/learning/paper-sell-edit/paper-sell-edit.component.html
+++ b/src/app/learning/paper-sell-edit/paper-sell-edit.component.html
@@ -21,6 +21,8 @@
         <button class="btn btn-primary mr-1" type="button" (click)="save(paperSell);" 
                                              [disabled]="!sellForm.form.valid">Edit</button>
 
+        <button class="btn btn-primary mr-1" type="button" (click)="delete(paperSell);">Delete</button>
+
       </div>
 
     </div>
