--- a/src/app/learning/paper-sell-edit/paper-sell-edit.component.html
+++ b/src/app/learning/paper-sell-edit/paper-sell-edit.component.html
@@ -18,10 +18,10 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-primary mr-1" type="button" (click)="save(paperSell);" 
+        <button class="btn btn-primary mr-1" type="button" (click)="save();" 
                                              [disabled]="!sellForm.form.valid">Edit</button>
 
-        <button class="btn btn-primary mr-1" type="button" (click)="delete(paperSell);">Delete</button>
+        <button class="btn btn-primary mr-1" type="button" (click)="delete();">Delete</button>
 
       </div>
 
