--- a/src/app/learning/paper-sell-card/paper-sell-card.component.html
+++ b/src/app/learning/paper-sell-card/paper-sell-card.component.html
@@ -17,16 +17,13 @@
             <li>Price(Of sell): R$ {{ paperSell.price | number: '1.2-2' }}</li>
             <li>Gain: R$ {{ paperSell.sell_gain | number: '1.2-2' }}</li>
             <li>Percent: {{ paperSell.sell_gain_percent | number: '1.2-2' }}%</li>
-
-            <!-- <li>Cost: R$ {{ buy.cost | number: '1.2-2' }}/R$ {{ buy.average_cost | number: '1.2-2' }}</li> -->
           </ul>
         </div>
         <div class="col-6">
           <ul>
             <li>Stock value: {{ paperSell.stock_data.price }}
-              <zen-edit-stock [stockInput]="paperSell.stock_data"></zen-edit-stock> 
+              <zen-edit-stock [stockInput]="paperSell.stock_data" (onStockUpdated)="refreshSell()"></zen-edit-stock> 
               <li><hr/></li>
-              <!-- <li>Gain: <span [outerHTML]="buy.operation_gain | number: '1.2-2' | numberColor "></span>/ <span [outerHTML]="buy.operation_gain_percent | number: '1.2-2' | numberColor "></span>%</li> -->
           </ul>
         </div>
       </div>
