--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -5,9 +5,9 @@
     <div class="row">
       <div class="col-12 text-center">
         <a class="p-2 text-dark" href="/stock">Stock</a> |
-        <a class="p-2 text-dark" href="/experience">Focus on Experiences</a> |
-        <a class="p-2 text-dark" href="/buy-focus">Focus on Purchases</a> |
-        <a class="p-2 text-dark" href="/sell-focus">Focus on Sales</a> |
+        <a class="p-2 text-dark" href="/experience">Experiences</a> |
+        <a class="p-2 text-dark" href="/buy-focus">Purchases</a> |
+        <a class="p-2 text-dark" href="/sell-focus">Sales</a> |
         <a class="p-2 text-dark" href="/operations-center">Operations Center</a>
       </div>
         <div class="col-12 text-center">
