--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -7,13 +7,11 @@
     <div class="col-12" *ngFor="let experience of experiences">
       <div class="row mt-3">
         <div class="col-5">
-          <zen-experience-card [experience]="experience"
-            (onExperienceChanged)="retrieveExperiments()"></zen-experience-card> 
+          <zen-experience-card [experience]="experience"></zen-experience-card> 
         </div>
 
         <div class="col-7">
-          <zen-experience-edit [experience]="experience"
-            (onEditExperience)="retrieveExperiments()"></zen-experience-edit>
+          <zen-experience-edit [experience]="experience" (onExperienceChanged)="updateExperience($event, experience)"></zen-experience-edit>
           <hr>
         </div>
       </div>
