--- a/src/app/operation/experience-list/experience-list.component.html
+++ b/src/app/operation/experience-list/experience-list.component.html
@@ -21,8 +21,10 @@
       <td>R$ {{ experience.price }}/R$ {{ experience.operation_average_price | number: '1.2-2'}}</td>
       <td>R$ {{ experience.stock_data.price }}</td>
       <td>R$ {{ experience.target }}</td>
-      <td>R$ <span [outerHTML]="experience.target_gain | number:'1.2-2' | numberColor"></span>/<span [outerHTML]="experience.target_gain_percent | number: '1.2-2' | numberColor"></span>%</td>
-      <td>R$ <span [outerHTML]="experience.experience_gain | number: '1.2-2' | numberColor"></span>/<span
-        [outerHTML]="experience.experience_gain_percent | number: '1.2-2' | numberColor"></span>%</td>
+      <td>R$ <span [ngStyle]="{'color': experience.target_gain | number:'1.2-2' | numberColor}">{{
+          experience.target_gain | number:'1.2-2' }}</span>/<span [ngStyle]="{'color': experience.target_gain_percent |
+          number: '1.2-2' | numberColor}">{{ experience.target_gain_percent | number: '1.2-2' }}</span>%</td>
+      <td>R$ <span [ngStyle]="{'color': experience.experience_gain | number: '1.2-2' | numberColor}">{{ experience.experience_gain | number: '1.2-2' }}</span>/<span
+        [ngStyle]="{'color': experience.experience_gain_percent | number: '1.2-2' | numberColor}">{{ experience.experience_gain_percent | number: '1.2-2' }}</span>%</td>
   </tbody>
 </table>
