--- a/src/app/operation/experience-card/experience-card.component.html
+++ b/src/app/operation/experience-card/experience-card.component.html
@@ -21,19 +21,22 @@
       <div class="row">
         <div class="col-5">
           <ul *ngIf="experience.detailed">
-            <li>Stop Loss: R$ <span>{{ experience.stop_loss_result | number: '1.2-2' | numberColor }}</span>/ <span> {{
-                experience.stop_loss_percent | number: '1.2-2' | numberColor }}</span>%</li>
-            <li>Target Gain: R$ <span [outerHTML]="experience.target_gain | number:'1.2-2' | numberColor"></span> /
-              <span [outerHTML]="experience.target_gain_percent | number: '1.2-2' | numberColor"></span>%</li>
+            <li>Stop Loss: R$ <span [ngStyle]="{'color': experience.stop_loss_result | number: '1.2-2' | numberColor}"> {{ experience.stop_loss_result | number: '1.2-2' }}</span>/ 
+              <span [ngStyle]="{'color': experience.stop_loss_percent | number: '1.2-2' | numberColor} ">{{ experience.stop_loss_percent | number: '1.2-2' }}</span>%</li>
+            <li>Target Gain: R$ <span [ngStyle]="{'color': experience.target_gain | number:'1.2-2' | numberColor}">{{ experience.target_gain | number:'1.2-2' }}</span> /
+              <span [ngStyle]="{'color': experience.target_gain_percent | number: '1.2-2' | numberColor}">{{ experience.target_gain_percent | number: '1.2-2' }}</span>%</li>
             <li>Recommended Limit: R$ {{ experience.operation_limit | number:'1.2-2' }} </li>
           </ul>
 
           <div class="card" style="font-size: 0.75rem;" *ngIf="experience.detailed">
             <div class="card-header">Equity Impact</div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Stop loss: <span [outerHTML]=" experience.stop_loss_total_percent | number: '1.2-2' | numberColor "></span>%</li>
-              <li class="list-group-item">Target: <span [outerHTML]=" experience.target_gain_total_percent | number: '1.2-2' | numberColor "></span>%</li>
-              <li class="list-group-item">Stock: <span [outerHTML]=" experience.experience_total_gain_percent | number: '1.2-2' | numberColor "></span>%</li>
+              <li class="list-group-item">Stop loss: <span [ngStyle]="{'color':  experience.stop_loss_total_percent |
+              number: '1.2-2' | numberColor }">{{  experience.stop_loss_total_percent | number: '1.2-2' }}</span>%</li>
+              <li class="list-group-item">Target: <span [ngStyle]="{'color':  experience.target_gain_total_percent |
+              number: '1.2-2' | numberColor }">{{  experience.target_gain_total_percent | number: '1.2-2' }}</span>%</li>
+              <li class="list-group-item">Stock: <span [ngStyle]="{'color':  experience.experience_total_gain_percent |
+              number: '1.2-2' | numberColor }">{{  experience.experience_total_gain_percent | number: '1.2-2' }}</span>%</li>
             </ul>
           </div>
         </div>
@@ -45,8 +48,9 @@
             <li><hr></li>
             <li>Stock price: R$ {{ experience.stock_data.price }}</li>
             <li *ngIf="experience.detailed">Stock cost: R$ {{ experience.stock_cost | number: '1.2-2' }}/R$ {{ experience.average_stock_cost | number: '1.2-2' }}</li>
-            <li *ngIf="experience.detailed">Stock profit: R$ <span [outerHTML]="experience.experience_gain | number: '1.2-2' | numberColor "></span>/
-              <span [outerHTML]="experience.experience_gain_percent | number: '1.2-2' | numberColor"></span>%</li>
+            <li *ngIf="experience.detailed">Stock profit: R$ <span [ngStyle]="{'color': experience.experience_gain |
+            number: '1.2-2' | numberColor }">{{ experience.experience_gain | number: '1.2-2' }}</span>/
+          <span [ngStyle]="{'color': experience.experience_gain_percent | number: '1.2-2' | numberColor}">{{ experience.experience_gain_percent | number: '1.2-2' }}</span>%</li>
           </ul>
           <zen-edit-stock [stockInput]="experience.stock_data" (onStockUpdated)="notifyStockUpdated($event)"></zen-edit-stock>
         </div>
