--- a/src/app/operation/experience-card/experience-card.component.html
+++ b/src/app/operation/experience-card/experience-card.component.html
@@ -9,13 +9,16 @@
       <div class="col-1">
         <zen-note-modal [operation_pk]="experience.pk"></zen-note-modal>
       </div>
-      <div class="col-1">
-        <ngb-rating [max]="1" [resettable]="true" [(rate)]="experience.favorite">
+
+      <div class="col-1" (click)="markToUpdate()">
+        <ngb-rating [max]="1" [resettable]="true" [(rate)]="experience.favorite"
+          (rateChange)="updateFavorite()">
           <ng-template let-fill="fill">
             <span class="star" [class.filled]="fill === 100">&#9733;</span>
           </ng-template>
         </ngb-rating>
       </div>
+
     </div>
     <div class="card-text">
       <div class="row">
